--- a/ultima-birra-service/application-local.properties
+++ b/ultima-birra-service/application-local.properties
@@ -33,3 +33,5 @@ spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 #passowrd per l'utilizzo di code docker artemis
 spring.artemis.user=artemis
 spring.artemis.password=simula
+
+spring.config.import=ultima-server-config
