--- a/ultima-birra-service/application-local.properties
+++ b/ultima-birra-service/application-local.properties
@@ -34,4 +34,5 @@ spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 spring.artemis.user=artemis
 spring.artemis.password=simula
 #
-#spring.config.import=ultima-server-config
+spring.zipkin.baseUrl=http://localhost:9411
+spring.zipkin.enabled=true
