--- a/inventory-service/application-local.properties
+++ b/inventory-service/application-local.properties
@@ -29,3 +29,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
 #passowrd per l'utilizzo di code docker artemis
 spring.artemis.user=artemis
 spring.artemis.password=simula
+
+spring.zipkin.baseUrl=http://localhost:9411
+spring.zipkin.enabled=true
